<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/req_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="6dp"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="#6897EF">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:id="@+id/req_item_title"
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMediumInverse"/>
            <CheckBox
                android:id="@+id/req_item_check"
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:buttonTint="#FFFFFF"
                android:drawableTint="#FFFFFF"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>